# aoc2025-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: aoc2025.hpp  day1.hpp  day2.hpp  day3.hpp
src/: aoc2025.cpp  day1.cpp  day1_test.cpp  day2.cpp  day2_test.cpp  day3.cpp  day3_test.cpp  main.cpp
